--- a/California_House_Price_Predicton.ipynb
+++ b/California_House_Price_Predicton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3/K0kp9d968ZPLlflzWoE",
+      "authorship_tag": "ABX9TyNYxWBesCMoPPCYty5Gn72v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,62 +27,107 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Loading Libraries**"
+      ],
+      "metadata": {
+        "id": "fdg_Cxrs8nzb"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "id": "sxnbx4L8wlBO"
       },
       "outputs": [],
       "source": [
         "import numpy as np\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.linear_model import LinearRegression"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Mounting Google Drive**"
+      ],
+      "metadata": {
+        "id": "SfbtnpBu8kOn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8ca72422",
+        "outputId": "e5c33aa0-6967-4cca-c9de-3de6290e6313"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "print(\"\\nGoogle Drive mounted successfully!\")\n",
+        "print(\"You can now find your Google Drive files under '/content/drive/My Drive/'.\")"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "\n",
+            "Google Drive mounted successfully!\n",
+            "You can now find your Google Drive files under '/content/drive/My Drive/'.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Performing Linear Regression**"
+      ],
+      "metadata": {
+        "id": "uORgERFI88gF"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "data = pd.read_csv(\"sample_data/housing.csv\")"
+        "data_root = \"https://github.com/ageron/data/raw/main/\"\n",
+        "lifesat = pd.read_csv(data_root + \"lifesat/lifesat.csv\")\n",
+        "lifesat.head(5)"
       ],
-      "metadata": {
-        "id": "PW1aMOm22QJp"
-      },
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 226
+          "height": 206
         },
-        "id": "VxohPWHF2Zjt",
-        "outputId": "70c7200e-9ed7-46ca-a9f5-8a87c664f22e"
+        "id": "n4F0jTMQ3tl6",
+        "outputId": "ba626e0a-41cc-4284-9663-325b4050a861"
       },
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
-              "0    -122.23     37.88                41.0        880.0           129.0   \n",
-              "1    -122.22     37.86                21.0       7099.0          1106.0   \n",
-              "2    -122.24     37.85                52.0       1467.0           190.0   \n",
-              "3    -122.25     37.85                52.0       1274.0           235.0   \n",
-              "4    -122.25     37.85                52.0       1627.0           280.0   \n",
-              "\n",
-              "   population  households  median_income  median_house_value ocean_proximity  \n",
-              "0       322.0       126.0         8.3252            452600.0        NEAR BAY  \n",
-              "1      2401.0      1138.0         8.3014            358500.0        NEAR BAY  \n",
-              "2       496.0       177.0         7.2574            352100.0        NEAR BAY  \n",
-              "3       558.0       219.0         5.6431            341300.0        NEAR BAY  \n",
-              "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
+              "   Country  GDP per capita (USD)  Life satisfaction\n",
+              "0   Russia          26456.387938                5.8\n",
+              "1   Greece          27287.083401                5.4\n",
+              "2   Turkey          28384.987785                5.5\n",
+              "3   Latvia          29932.493910                5.9\n",
+              "4  Hungary          31007.768407                5.6"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0d408c70-80c4-4df5-9651-bab76f429746\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-cb2cb6f6-2285-4410-bab7-b736a6248a3f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -101,83 +146,41 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>longitude</th>\n",
-              "      <th>latitude</th>\n",
-              "      <th>housing_median_age</th>\n",
-              "      <th>total_rooms</th>\n",
-              "      <th>total_bedrooms</th>\n",
-              "      <th>population</th>\n",
-              "      <th>households</th>\n",
-              "      <th>median_income</th>\n",
-              "      <th>median_house_value</th>\n",
-              "      <th>ocean_proximity</th>\n",
+              "      <th>Country</th>\n",
+              "      <th>GDP per capita (USD)</th>\n",
+              "      <th>Life satisfaction</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>-122.23</td>\n",
-              "      <td>37.88</td>\n",
-              "      <td>41.0</td>\n",
-              "      <td>880.0</td>\n",
-              "      <td>129.0</td>\n",
-              "      <td>322.0</td>\n",
-              "      <td>126.0</td>\n",
-              "      <td>8.3252</td>\n",
-              "      <td>452600.0</td>\n",
-              "      <td>NEAR BAY</td>\n",
+              "      <td>Russia</td>\n",
+              "      <td>26456.387938</td>\n",
+              "      <td>5.8</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>-122.22</td>\n",
-              "      <td>37.86</td>\n",
-              "      <td>21.0</td>\n",
-              "      <td>7099.0</td>\n",
-              "      <td>1106.0</td>\n",
-              "      <td>2401.0</td>\n",
-              "      <td>1138.0</td>\n",
-              "      <td>8.3014</td>\n",
-              "      <td>358500.0</td>\n",
-              "      <td>NEAR BAY</td>\n",
+              "      <td>Greece</td>\n",
+              "      <td>27287.083401</td>\n",
+              "      <td>5.4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>-122.24</td>\n",
-              "      <td>37.85</td>\n",
-              "      <td>52.0</td>\n",
-              "      <td>1467.0</td>\n",
-              "      <td>190.0</td>\n",
-              "      <td>496.0</td>\n",
-              "      <td>177.0</td>\n",
-              "      <td>7.2574</td>\n",
-              "      <td>352100.0</td>\n",
-              "      <td>NEAR BAY</td>\n",
+              "      <td>Turkey</td>\n",
+              "      <td>28384.987785</td>\n",
+              "      <td>5.5</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>-122.25</td>\n",
-              "      <td>37.85</td>\n",
-              "      <td>52.0</td>\n",
-              "      <td>1274.0</td>\n",
-              "      <td>235.0</td>\n",
-              "      <td>558.0</td>\n",
-              "      <td>219.0</td>\n",
-              "      <td>5.6431</td>\n",
-              "      <td>341300.0</td>\n",
-              "      <td>NEAR BAY</td>\n",
+              "      <td>Latvia</td>\n",
+              "      <td>29932.493910</td>\n",
+              "      <td>5.9</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>-122.25</td>\n",
-              "      <td>37.85</td>\n",
-              "      <td>52.0</td>\n",
-              "      <td>1627.0</td>\n",
-              "      <td>280.0</td>\n",
-              "      <td>565.0</td>\n",
-              "      <td>259.0</td>\n",
-              "      <td>3.8462</td>\n",
-              "      <td>342200.0</td>\n",
-              "      <td>NEAR BAY</td>\n",
+              "      <td>Hungary</td>\n",
+              "      <td>31007.768407</td>\n",
+              "      <td>5.6</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -185,7 +188,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0d408c70-80c4-4df5-9651-bab76f429746')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cb2cb6f6-2285-4410-bab7-b736a6248a3f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -237,12 +240,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0d408c70-80c4-4df5-9651-bab76f429746 button.colab-df-convert');\n",
+              "        document.querySelector('#df-cb2cb6f6-2285-4410-bab7-b736a6248a3f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0d408c70-80c4-4df5-9651-bab76f429746');\n",
+              "        const element = document.querySelector('#df-cb2cb6f6-2285-4410-bab7-b736a6248a3f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -262,8 +265,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b4602bb0-4f8f-4317-97f4-70215f99560c\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b4602bb0-4f8f-4317-97f4-70215f99560c')\"\n",
+              "    <div id=\"df-d29a0050-8ba7-4f56-ae93-bc4455934364\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d29a0050-8ba7-4f56-ae93-bc4455934364')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -382,7 +385,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b4602bb0-4f8f-4317-97f4-70215f99560c button');\n",
+              "            document.querySelector('#df-d29a0050-8ba7-4f56-ae93-bc4455934364 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -394,14 +397,34 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "variable_name": "data",
-              "summary": "{\n  \"name\": \"data\",\n  \"rows\": 20640,\n  \"fields\": [\n    {\n      \"column\": \"longitude\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2.003531723502581,\n        \"min\": -124.35,\n        \"max\": -114.31,\n        \"num_unique_values\": 844,\n        \"samples\": [\n          -118.63,\n          -119.86,\n          -121.26\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"latitude\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2.1359523974571117,\n        \"min\": 32.54,\n        \"max\": 41.95,\n        \"num_unique_values\": 862,\n        \"samples\": [\n          33.7,\n          34.41,\n          38.24\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"housing_median_age\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 12.585557612111637,\n        \"min\": 1.0,\n        \"max\": 52.0,\n        \"num_unique_values\": 52,\n        \"samples\": [\n          35.0,\n          25.0,\n          7.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"total_rooms\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2181.615251582787,\n        \"min\": 2.0,\n        \"max\": 39320.0,\n        \"num_unique_values\": 5926,\n        \"samples\": [\n          699.0,\n          1544.0,\n          3966.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"total_bedrooms\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 421.3850700740322,\n        \"min\": 1.0,\n        \"max\": 6445.0,\n        \"num_unique_values\": 1923,\n        \"samples\": [\n          1538.0,\n          1298.0,\n          1578.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"population\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1132.4621217653375,\n        \"min\": 3.0,\n        \"max\": 35682.0,\n        \"num_unique_values\": 3888,\n        \"samples\": [\n          4169.0,\n          636.0,\n          3367.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"households\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 382.3297528316099,\n        \"min\": 1.0,\n        \"max\": 6082.0,\n        \"num_unique_values\": 1815,\n        \"samples\": [\n          21.0,\n          750.0,\n          1447.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"median_income\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1.8998217179452732,\n        \"min\": 0.4999,\n        \"max\": 15.0001,\n        \"num_unique_values\": 12928,\n        \"samples\": [\n          5.0286,\n          2.0433,\n          6.1228\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"median_house_value\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 115395.6158744132,\n        \"min\": 14999.0,\n        \"max\": 500001.0,\n        \"num_unique_values\": 3842,\n        \"samples\": [\n          194300.0,\n          379000.0,\n          230100.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"ocean_proximity\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"<1H OCEAN\",\n          \"ISLAND\",\n          \"INLAND\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "variable_name": "lifesat",
+              "summary": "{\n  \"name\": \"lifesat\",\n  \"rows\": 27,\n  \"fields\": [\n    {\n      \"column\": \"Country\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 27,\n        \"samples\": [\n          \"Spain\",\n          \"United Kingdom\",\n          \"Slovenia\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"GDP per capita (USD)\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 9631.452318546564,\n        \"min\": 26456.3879381321,\n        \"max\": 60235.7284916969,\n        \"num_unique_values\": 27,\n        \"samples\": [\n          36215.4475907307,\n          41627.129269425,\n          36547.7389559849\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Life satisfaction\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.7656068482934607,\n        \"min\": 5.4,\n        \"max\": 7.6,\n        \"num_unique_values\": 19,\n        \"samples\": [\n          5.8,\n          6.1,\n          6.5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 12
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Loading CSV**"
+      ],
+      "metadata": {
+        "id": "dCIGe-158tqz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = pd.read_csv(\"/content/drive/MyDrive/California HPP /housing.csv\")"
+      ],
+      "metadata": {
+        "id": "PW1aMOm22QJp"
+      },
+      "execution_count": 11,
+      "outputs": []
     }
   ]
 }
